--- a/src/assets/styles/layout.less
+++ b/src/assets/styles/layout.less
@@ -64,10 +64,10 @@
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-flex-wrap: wrap;
+  -webkit-flex-wrap: nowrap;
   -webkit-box-orient: vertical;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   -webkit-box-lines: single;
 }
 
