--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -23,7 +23,7 @@
       .sub-menu-item{
         background-color:@COLOR3;
         &.is-active{
-          color:red;
+          color:@COLOR5;
         }
       }
     }
