--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -17,5 +17,9 @@
 
 .form-title{
   font-size:16px;
+  height:50px;
+  line-height:50px;
   font-weight: bold;
+  margin-left:10px;
+  padding-left:-10px;
 }
