--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -3,7 +3,90 @@ body,html,body>div#__nuxt{
   width:100%;
 }
 
-.page{
-  min-height:100%;
-  min-height:100%;
+.main-container{
+  background: #EFF3F5;
 }
+.pageContainer{
+  background: #EFF3F5;
+}
+
+ .ivu-modal-header {
+    background: #265EA2;
+    .ivu-modal-header-inner {
+      color: white;
+    }
+  }
+  
+.page{
+  height:825px;
+  padding-left:10px;
+  background: white;
+  margin:20px;
+  border:1px solid #DDDDDD;
+  .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single{
+    width:120px;
+    display: inline-block;
+  }
+
+  .ivu-tabs.ivu-tabs-card>.ivu-tabs-bar .ivu-tabs-tab-active{
+  color:black!important;
+  border-top:2px solid #93AFD1!important;
+}
+
+// 默认按钮内部文字颜色
+.defaultButton{
+  color:#265EA2;
+}
+// 蓝色按钮
+.blueButton{
+  background: #265EA2;
+  color:#fff;
+}
+.blueButton:hover{
+  background: #1D4F8B;
+  color:#fff;
+}
+// 页面底部大按钮
+.highButton{
+  height:46px;
+  border-radius: 0;
+  background: #265EA2;
+  color:#fff;
+}
+.highButton:hover{
+  background: #1D4F8B;
+  color:#fff;
+}
+
+.highDefaultButton{
+   height:46px;
+  border-radius: 0;
+  background: #E4E4E4;
+  color:#265EA2;;
+}
+
+.ivu-tabs-nav-scroll{
+  overflow: unset;
+}
+}
+.ivu-tree-title-selected, .ivu-tree-title-selected:hover{
+  background:#C8DFF4!important;
+}
+.ivu-poptip-popper{
+  width:100%!important;
+  left:0!important;
+  top:50px!important;
+}
+body .theme-default .component.work-header .component.work-menu .ivu-poptip-inner{
+  border-color: #dddddd!important;
+}
+.ivu-tabs-nav-scroll{
+  background: white!important;
+}
+.large-page{
+   .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single{
+    width:100%;
+    display: inline-block;
+  }
+}
+
