--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -30,7 +30,7 @@ body,html,body>div#__nuxt{
 
   .ivu-tabs.ivu-tabs-card>.ivu-tabs-bar .ivu-tabs-tab-active{
   color:black!important;
-  border-top:2px solid #93AFD1!important;
+  border-top:2px solid #265ea2!important;
 }
 
 // 默认按钮内部文字颜色
