--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -16,7 +16,13 @@ body,html,body>div#__nuxt{
       color: white;
     }
   }
-  
+ .ivu-date-picker{
+   width:8%!important;
+ } 
+//  .ivu-modal-body{
+//    height:600px;
+//    overflow:auto;
+//  }
 .page{
   height:825px;
   padding-left:10px;
