修改work-menu&work-head&头像并且加poptip

--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -19,10 +19,13 @@ body,html,body>div#__nuxt{
  .ivu-date-picker{
    width:8%!important;
  } 
-//  .ivu-modal-body{
-//    height:600px;
-//    overflow:auto;
-//  }
+.ivu-select-dropdown{
+    width: 293px;
+    transform-origin: center top 0px;
+    position: absolute;
+    left: -2px;
+    top: 32px;
+}
 .page{
   height:737px;
   padding-left:10px;
@@ -78,10 +81,12 @@ body,html,body>div#__nuxt{
 .ivu-tree-title-selected, .ivu-tree-title-selected:hover{
   background:#C8DFF4!important;
 }
-.ivu-poptip-popper{
-  width:100%!important;
-  left:0!important;
-  top:50px!important;
+.work-menu{
+  .ivu-poptip-popper{
+    width:100%!important;
+    left:0!important;
+    top:50px!important;
+ }
 }
 body .theme-default .component.work-header .component.work-menu .ivu-poptip-inner{
   border-color: #dddddd!important;
