--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -78,6 +78,17 @@ body,html,body>div#__nuxt{
   overflow: unset;
 }
 }
+
+.ivu-modal{
+  .blueButton{
+  background: #265EA2;
+  color:#fff;
+}
+.blueButton:hover{
+  background: #1D4F8B;
+  color:#fff;
+}
+}
 .ivu-tree-title-selected, .ivu-tree-title-selected:hover{
   background:#C8DFF4!important;
 }
