导出字体&label-width

--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -27,13 +27,13 @@ body,html,body>div#__nuxt{
     top: 32px;
 }
 .page{
-  height:737px;
+  height:785px;
   padding-left:10px;
   background: white;
   margin:20px;
   border:1px solid #DDDDDD;
-  .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single{
-    width:120px;
+  .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
+    width:320px;
     display: inline-block;
   }
 
@@ -92,6 +92,7 @@ body,html,body>div#__nuxt{
 .ivu-tree-title-selected, .ivu-tree-title-selected:hover{
   background:#C8DFF4!important;
 }
+
 .work-menu{
   .ivu-poptip-popper{
     width:100%!important;
@@ -99,12 +100,15 @@ body,html,body>div#__nuxt{
     top:50px!important;
  }
 }
+
 body .theme-default .component.work-header .component.work-menu .ivu-poptip-inner{
   border-color: #dddddd!important;
 }
+
 .ivu-tabs-nav-scroll{
   background: white!important;
 }
+
 .large-page{
    .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single{
     width:100%;
