--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -36,7 +36,12 @@ body,html,body>div#__nuxt{
     width:320px;
     display: inline-block;
   }
-
+  .pagination{
+    .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
+    width:78px;
+    display: inline-block;
+  }
+  }
   .ivu-tabs.ivu-tabs-card>.ivu-tabs-bar .ivu-tabs-tab-active{
   color:black!important;
   border-top:2px solid #265ea2!important;
