--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -32,9 +32,11 @@ body,html,body>div#__nuxt{
   background: white;
   margin:20px;
   border:1px solid #DDDDDD;
-  .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
+  .ivu-form{
+   .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
     width:320px;
     display: inline-block;
+   }
   }
   .pagination{
     .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
@@ -83,6 +85,7 @@ body,html,body>div#__nuxt{
   overflow: unset;
 }
 }
+  
 
 .ivu-modal{
   .blueButton{
@@ -93,6 +96,8 @@ body,html,body>div#__nuxt{
   background: #1D4F8B;
   color:#fff;
 }
+
+
 }
 .ivu-tree-title-selected, .ivu-tree-title-selected:hover{
   background:#C8DFF4!important;
