--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -16,6 +16,16 @@ body,html,body>div#__nuxt{
       color: white;
     }
   }
+  .ivu-modal-content{
+    .ivu-modal-close{
+      .ivu-icon , .ivu-icon-ios-close-empty{
+      color:#fff;
+      }
+      .ivu-icon:hover , .ivu-icon-ios-close-empty:hover{
+      color:#fff;
+      }
+    }
+  }
  .ivu-date-picker{
    width:8%!important;
  } 
@@ -85,7 +95,12 @@ body,html,body>div#__nuxt{
   overflow: unset;
 }
 }
-  
+  .purchase_information{
+    .ive-modal-body{
+      height:600px;
+      overflow: auto;
+    }
+  }
 
 .ivu-modal{
   .blueButton{
@@ -96,7 +111,23 @@ body,html,body>div#__nuxt{
   background: #1D4F8B;
   color:#fff;
 }
+.highButton{
+  height:46px;
+  border-radius: 0;
+  background: #265EA2;
+  color:#fff;
+}
+.highButton:hover{
+  background: #1D4F8B;
+  color:#fff;
+}
 
+.highDefaultButton{
+   height:46px;
+  border-radius: 0;
+  background: #E4E4E4;
+  color:#265EA2;;
+}
 
 }
 .ivu-tree-title-selected, .ivu-tree-title-selected:hover{
