--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -27,7 +27,7 @@ body,html,body>div#__nuxt{
     }
   }
  .ivu-date-picker{
-   width:8%!important;
+  //  width:8%!important;
  } 
 .ivu-select-dropdown{
     width: 293px;
@@ -59,6 +59,15 @@ body,html,body>div#__nuxt{
   border-top:2px solid #265ea2!important;
 }
 
+.submitBar {
+    height: 70px;
+    width: 100%;
+    background: #fff;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border: 1px solid #ddd;
+  }
 // 默认按钮内部文字颜色
 .defaultButton{
   color:#265EA2;
