修改data-grid 及样式
Signed-off-by: machao <376721434@qq.com>

--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -165,4 +165,19 @@ body .theme-default .component.work-header .component.work-menu .ivu-poptip-inne
     display: inline-block;
   }
 }
+// 修改默认data-grid 边框颜色
+.grid-content{    
+    border-top: 1px solid rgb(221,221,222) !important;
+    border-left: 1px solid rgb(221,221,222) !important;
+}
+.data-grid-item__label{
+    border:0 !important
+}
+.data-grid-item__separate{
+    background: rgb(221,221,222) !important;
+}
+.data-grid-item{
+    border-right: 1px solid rgb(221,221,222) !important;
+    border-bottom: 1px solid rgb(221,221,222) !important;
 
+}
