--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -2,7 +2,18 @@ body,html,body>div#__nuxt{
   height:100%;
   width:100%;
 }
-
+// datagrid边框
+.grid-content{
+  border-top: 1px solid #DCDDE0!important;
+  border-left: 1px solid #DCDDE0!important;
+  .data-grid-item{
+    border-right: 1px solid #DCDDE0!important;
+    border-bottom: 1px solid #DCDDE0!important;
+    .data-grid-item__separate{
+      background: #DCDDE0!important;
+    }
+  }
+}
 .main-container{
   background: #EFF3F5;
 }
