--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -14,6 +14,14 @@ body,html,body>div#__nuxt{
     }
   }
 }
+
+// 订单详情设置固定高度
+.purchaseInformation{
+  .ivu-modal-body {
+      height: 600px;
+      overflow: auto;
+    }
+}
 .main-container{
   background: #EFF3F5;
 }
