--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -61,6 +61,7 @@ body,html,body>div#__nuxt{
   background: white;
   margin:20px;
   border:1px solid #DDDDDD;
+  min-width:1200px;
   .ivu-form{
    .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
     width:320px;
