--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -62,6 +62,7 @@ body,html,body>div#__nuxt{
   margin:20px;
   border:1px solid #DDDDDD;
   min-width:1200px;
+  overflow: auto;
   .ivu-form{
    .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
     width:320px;
