--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -53,7 +53,10 @@ body>div#__nuxt {
     }
   }
 }
-
+.ivu-table-body {
+  max-height: 500px;
+  overflow: auto!important;
+}
 .ivu-date-picker {
   //  width:8%!important;
 }
@@ -72,7 +75,7 @@ body>div#__nuxt {
   background: white;
   margin:20px;
   border:1px solid #DDDDDD;
-  min-width:1200px;
+  min-width:1366px;
   overflow: auto;
   .ivu-form{
    .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
