--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -231,3 +231,11 @@ body .theme-default .component.work-header .component.work-menu .ivu-poptip-inne
     display: none;
   }
 }
+// 去掉table表格padding
+.ivu-table-cell {
+  padding-left: 0!important;
+  padding-right: 0!important;
+}
+.data-box .ivu-btn-text {
+  padding: 6px 8px;
+}
