--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -236,6 +236,6 @@ body .theme-default .component.work-header .component.work-menu .ivu-poptip-inne
   padding-left: 0!important;
   padding-right: 0!important;
 }
-.data-box .ivu-btn-text {
+.i-table .ivu-btn-text {
   padding: 6px 8px;
 }
