--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -53,10 +53,10 @@ body>div#__nuxt {
     }
   }
 }
-.ivu-table-body {
-  max-height: 500px;
-  overflow: auto!important;
-}
+// .ivu-table-body {
+//   max-height: 500px;
+//   overflow: auto!important;
+// }
 .ivu-date-picker {
   //  width:8%!important;
 }
