--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -25,7 +25,10 @@ body>div#__nuxt {
     overflow: auto;
   }
 }
-
+.data-grid-item__content{
+  min-height: 30px;
+  min-width:80px;
+}
 .main-container {
   background: #EFF3F5;
 }
