--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -241,3 +241,6 @@ body .theme-default .component.work-header .component.work-menu .ivu-poptip-inne
 .i-table .ivu-btn-text {
   padding: 6px 8px;
 }
+body .ivu-modal .ivu-select-dropdown{
+ position: fixed !important;
+}
