--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -233,6 +233,9 @@ body .theme-default .component.work-header .component.work-menu .ivu-poptip-inne
     display: none;
   }
 }
+.ivu-tooltip-inner{
+  white-space: normal!important;
+}
 // 去掉table表格padding
 .ivu-table-cell {
   padding-left: 0!important;
