--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -1,90 +1,24 @@
-body,
 html,
-body>div#__nuxt {
+body,
+#app {
   height: 100%;
   width: 100%;
-}
-
-// datagrid边框
-.grid-content {
-  border-top: 1px solid #DCDDE0!important;
-  border-left: 1px solid #DCDDE0!important;
-  .data-grid-item {
-    border-right: 1px solid #DCDDE0!important;
-    border-bottom: 1px solid #DCDDE0!important;
-    .data-grid-item__separate {
-      background: #DCDDE0!important;
-    }
-  }
-}
-
-// 订单详情设置固定高度
-.purchaseInformation {
-  .ivu-modal-body {
-    height: 600px;
-    overflow: auto;
-  }
-}
-.data-grid-item__content{
-  min-height: 30px;
-}
-.main-container {
-  background: #EFF3F5;
-}
-
-.pageContainer {
-  background: #EFF3F5;
-}
-
-.ivu-modal-header {
-  background: #265EA2;
-  .ivu-modal-header-inner {
-    color: white;
-  }
-}
-
-.ivu-modal-content {
-  .ivu-modal-close {
-    .ivu-icon,
-    .ivu-icon-ios-close-empty {
-      color: #fff;
-    }
-    .ivu-icon:hover,
-    .ivu-icon-ios-close-empty:hover {
-      color: #fff;
-    }
-  }
-}
-// .ivu-table-body {
-//   max-height: 500px;
-//   overflow: auto!important;
-// }
-.ivu-date-picker {
-  //  width:8%!important;
-}
-
-.ivu-select-dropdown {
-  width: 293px;
-  transform-origin: center top 0px;
-  position: absolute;
-  left: -2px;
-  top: 32px;
+  overflow-y: hidden;
+  overflow-x: auto;
+  padding: 0;
+  margin: 0;
+  min-width: 1280px;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 
 .page {
-  height: 798px;
-  padding-left: 10px;
+  min-width: 100%;
+  min-height: 100%;
   background: white;
-  margin:20px;
-  border:1px solid #DDDDDD;
-  min-width:1070px;
+  border: 1px solid #DDDDDD;
+  min-width: 1070px;
   overflow: auto;
-  .ivu-form{
-   .ivu-input-type,.ivu-input-wrapper,.ivu-select,.ivu-select-single .ivu-select-selection{
-    width:320px;
-    display: inline-block;
-   }
-  }
+  padding: 5px;
   .pagination {
     .ivu-input-type,
     .ivu-input-wrapper,
@@ -95,8 +29,8 @@ body>div#__nuxt {
     }
   }
   .ivu-tabs.ivu-tabs-card>.ivu-tabs-bar .ivu-tabs-tab-active {
-    color: black!important;
-    border-top: 2px solid #265ea2!important;
+    color: black !important;
+    border-top: 2px solid #265ea2 !important;
   }
   .submitBar {
     height: 70px;
@@ -106,12 +40,10 @@ body>div#__nuxt {
     bottom: 0;
     left: 0;
     border: 1px solid #ddd;
-  }
-  // 默认按钮内部文字颜色
+  } // 默认按钮内部文字颜色
   .defaultButton {
     color: #265EA2;
-  }
-  // 蓝色按钮
+  } // 蓝色按钮
   .blueButton {
     background: #265EA2;
     color: #fff;
@@ -119,8 +51,7 @@ body>div#__nuxt {
   .blueButton:hover {
     background: #1D4F8B;
     color: #fff;
-  }
-  // 页面底部大按钮
+  } // 页面底部大按钮
   .highButton {
     height: 46px;
     border-radius: 0;
@@ -140,13 +71,6 @@ body>div#__nuxt {
   }
   .ivu-tabs-nav-scroll {
     overflow: unset;
-  }
-}
-
-.purchase_information {
-  .ive-modal-body {
-    height: 600px;
-    overflow: auto;
   }
 }
 
@@ -180,70 +104,107 @@ body>div#__nuxt {
 
 .ivu-tree-title-selected,
 .ivu-tree-title-selected:hover {
-  background: #C8DFF4!important;
+  background: #C8DFF4 !important;
 }
 
-.work-menu {
-  .ivu-poptip-popper {
-    width: 100%!important;
-    left: 0!important;
-    top: 50px!important;
+.form-style() {
+  .ivu-form {
+    .ivu-input-type,
+    .ivu-input-wrapper,
+    .ivu-select,
+    .ivu-select-single .ivu-select-selection {
+      width: 320px;
+      display: inline-block;
+    }
   }
 }
 
-body .theme-default .component.work-header .component.work-menu .ivu-poptip-inner {
-  border-color: #dddddd!important;
-}
-
-.ivu-tabs-nav-scroll {
-  background: white!important;
-}
-
-.large-page {
-  .ivu-input-type,
-  .ivu-input-wrapper,
-  .ivu-select,
-  .ivu-select-single {
-    width: 100%;
-    display: inline-block;
-  }
-}
-
-// 修改默认data-grid 边框颜色
-.grid-content {
-  border-top: 1px solid rgb(221, 221, 222) !important;
-  border-left: 1px solid rgb(221, 221, 222) !important;
-}
-
-.data-grid-item__label {
-  border: 0 !important
-}
-
-.data-grid-item__separate {
-  background: rgb(221, 221, 222) !important;
-}
-
-.data-grid-item {
-  border-right: 1px solid rgb(221, 221, 222) !important;
-  border-bottom: 1px solid rgb(221, 221, 222) !important;
-}
-
-.ivu-modal-wrap.no-footer {
-  .ivu-modal-footer {
-    display: none;
-  }
-}
-.ivu-tooltip-inner{
-  white-space: normal!important;
-}
 // 去掉table表格padding
-.ivu-table-cell {
-  padding-left: 0!important;
-  padding-right: 0!important;
+// body .ivu-modal .ivu-select-dropdown {
+//   position: fixed !important;
+// }
+.table-style {
+  .i-table {
+    .ivu-btn-text {
+      padding: 6px 8px;
+    }
+    .ivu-table-cell {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  }
 }
-.i-table .ivu-btn-text {
-  padding: 6px 8px;
+
+.modal-style() {
+  .ivu-modal-wrap {
+    .ivu-modal-header {
+      background: #265EA2;
+      .ivu-modal-header-inner {
+        color: white;
+      }
+    }
+    .ivu-modal-body {
+      height: 600px;
+      overflow: auto;
+    }
+    .ivu-modal-content {
+      .ivu-modal-close {
+        .ivu-icon,
+        .ivu-icon-ios-close-empty {
+          color: #fff;
+        }
+        .ivu-icon:hover,
+        .ivu-icon-ios-close-empty:hover {
+          color: #fff;
+        }
+      }
+    }
+    &.no-footer {
+      .ivu-modal-footer {
+        display: none;
+      }
+    }
+  }
 }
-body .ivu-modal .ivu-select-dropdown{
- position: fixed !important;
+
+.select-style() {
+  .ivu-select-dropdown {
+    width: 293px;
+    transform-origin: center top 0px;
+    position: absolute;
+    left: -2px;
+    top: 32px;
+  }
+}
+
+.grid-style() {
+  @DataGridColor: #DCDDE0; // datagrid边框
+  .grid-content {
+    border-top: 1px solid @DataGridColor  !important;
+    border-left: 1px solid@DataGridColor  !important;
+    .data-grid-item {
+      border-right: 1px solid @DataGridColor  !important;
+      border-bottom: 1px solid @DataGridColor  !important;
+      .data-grid-item__separate {
+        background: @DataGridColor  !important;
+      }
+      .data-grid-item__content {
+        min-height: 30px;
+      }
+    }
+  }
+}
+
+#app,
+.ivu-modal {
+  .page,
+  .component {
+    .form-style(); // .input-style();
+    // .button-style();
+    .table-style();
+    .select-style();
+    .grid-style(); // .radio-style();
+    // .fixed-style();
+  }
+  .modal-style();
 }
