--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -115,6 +115,7 @@ body>div#__nuxt {
   .blueButton {
     background: #265EA2;
     color: #fff;
+    margin-left:10px;
   }
   .blueButton:hover {
     background: #1D4F8B;
