--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -47,7 +47,7 @@ body,
   .blueButton {
     background: #265EA2;
     color: #fff;
-    margin-left:10px;
+    margin-left: 10px;
   }
   .blueButton:hover {
     background: #1D4F8B;
@@ -145,25 +145,8 @@ body,
       }
     }
     .ivu-modal-body {
-      height: 600px;
+      min-height: 500px;
       overflow: auto;
-    }
-    .ivu-modal-content {
-      .ivu-modal-close {
-        .ivu-icon,
-        .ivu-icon-ios-close-empty {
-          color: #fff;
-        }
-        .ivu-icon:hover,
-        .ivu-icon-ios-close-empty:hover {
-          color: #fff;
-        }
-      }
-    }
-    &.no-footer {
-      .ivu-modal-footer {
-        display: none;
-      }
     }
   }
 }
