--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -114,7 +114,7 @@ body,
     .ivu-input-wrapper,
     .ivu-select,
     .ivu-select-single .ivu-select-selection {
-      max-width: 320px;
+      // max-width: 320px;
     }
   }
 }
