--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -109,14 +109,14 @@ body,
 }
 
 .form-style() {
-  .ivu-form {
-    .ivu-input-type,
-    .ivu-input-wrapper,
-    .ivu-select,
-    .ivu-select-single .ivu-select-selection {
-      // max-width: 320px;
-    }
-  }
+  // .ivu-form {
+  //   .ivu-input-type,
+  //   .ivu-input-wrapper,
+  //   .ivu-select,
+  //   .ivu-select-single .ivu-select-selection {
+  //     // max-width: 320px;
+  //   }
+  // }
 }
 
 // 去掉table表格padding
