修改销售收款申请

--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -167,6 +167,9 @@ body,
     .data-grid-item {
       border-right: 1px solid @DataGridColor  !important;
       border-bottom: 1px solid @DataGridColor  !important;
+      .data-grid-item__label{
+        padding-right: 8px;
+      }
       .data-grid-item__separate {
         background: @DataGridColor  !important;
       }
