--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -109,15 +109,31 @@ body,
 }
 
 .form-style() {
-  .ivu-form {
+  // 设置宽度
+  .set-input-width(@width) {
     .ivu-input-type,
     .ivu-input-wrapper,
     .ivu-select,
     .ivu-input-number,
     .ivu-select-single .ivu-select-selection {
-      width: 240px;
+      width: @width;
     }
   }
+
+  .ivu-form {
+    .set-input-width(200px);
+
+    &.mini {
+      .set-input-width(120px);
+    }
+    &.normal {
+      .set-input-width(180px);
+    }
+    &.large {
+      .set-input-width(240px);
+    }
+  }
+
   .data-form {
     .ivu-input-type,
     .ivu-input-wrapper,
