--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -3,6 +3,14 @@
   width:100%;
 }
 
+.full-height{
+  height:100%
+}
+
+.full-width{
+  width:100%;
+}
+
 .full-absolute{
   position: absolute;
   top: 0;
