--- a/src/assets/styles/themes/default.less
+++ b/src/assets/styles/themes/default.less
@@ -1,2 +1,7 @@
-@COLOR1:#265EA2;
-@COLOR2:#1D4F8B;
+@COLOR1: #265EA2; // 页面头部颜色
+@COLOR2: #41586e; // 菜单背景颜色
+@COLOR3: #FFFFFF; // 菜单文字颜色
+@COLOR4: #3c5367; // 鼠标移动进入颜色
+@COLOR5: #496075; // 菜单边框颜色
+@COLOR6: #364b5d; // 二级菜单背景色
+@COLOR7: #0092dc; // 鼠标移动进入ICON颜色
