--- a/src/assets/styles/themes/theme1.less
+++ b/src/assets/styles/themes/theme1.less
@@ -3,5 +3,5 @@
 @COLOR3: #FFFFFF; // 菜单文字颜色
 @COLOR4: #3c5367; // 鼠标移动进入颜色
 @COLOR5: #496075; // 菜单边框颜色
-@COLOR6: #364b5d; // 二级菜单背景色
+@COLOR6: #234783; // 二级菜单背景色
 @COLOR7: #0092dc; // 鼠标移动进入ICON颜色
