--- a/src/assets/styles/themes/default.less
+++ b/src/assets/styles/themes/default.less
@@ -1,7 +1,8 @@
-@COLOR1: #265EA2; // 页面头部颜色
-@COLOR2: #265EA2; // 菜单背景颜色
-@COLOR3: #FFFFFF; // 菜单文字颜色
+
+@COLOR1: #28558b; // 页面头部颜色
+@COLOR2: #283643; // 菜单背景颜色
+@COLOR3: #A2B4BA; // 菜单文字颜色
 @COLOR4: #112e53; // 鼠标移动进入颜色
 @COLOR5: rgb(188, 209, 255); // 菜单边框颜色
-@COLOR6: #234783; // 二级菜单背景色
+@COLOR6: #222a31; // 二级菜单背景色
 @COLOR7: #112e53; // 鼠标移动进入ICON颜色
