修改菜单样式

--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -36,6 +36,7 @@
       &:hover {
         &>.work-menu-title {
           background-color: @COLOR4;
+          color:#80838a;
           &>.icon-container {
             background-color: @COLOR7;
           }
