--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -35,3 +35,11 @@
   margin-left:10px;
   padding-left:-10px;
 }
+
+.ivu-tooltip.auto-warp{
+  .ivu-tooltip-inner{
+    white-space:normal;
+    word-break:break-all;
+    word-wrap:break-word; 
+  }
+}
