修改样式,新增页面,添加新的切图

--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -29,6 +29,7 @@ body,
         border: 1px solid #DDDDDD;
         overflow: auto;
         padding: 5px;
+        box-sizing: border-box;
     }
 }
 
