修改问题-页面样式

--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -12,7 +12,7 @@ body,
 }
 
 .color-style() {
-    @primary : #ffdb00;
+    @primary : #fadc4b;
     .primary {
         background: @primary;
         border-color: @primary;
@@ -36,6 +36,7 @@ body,
 // 默认按钮样式
 .button-style() {
     .van-button {
+        color: black;
         .color-style();
         .primary();
         &.full-radius {
