--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -27,7 +27,6 @@ body,
         min-width: 100%;
         min-height: 100%;
         background: white;
-        border: 1px solid #DDDDDD;
         overflow: auto;
         box-sizing: border-box;
     }
@@ -40,6 +39,7 @@ body,
         .color-style();
         .primary();
         &.full-radius {
+            width: 85%;
             border-radius: 25px;
         }
         &.small-radius {
