--- a/src/assets/styles/default.less
+++ b/src/assets/styles/default.less
@@ -46,6 +46,11 @@ body,
             border-radius: 5px;
         }
     }
+    .van-button--disabled {
+        color: #999;
+        background-color: #e8e8e8;
+        border: 1px solid #e5e5e5;
+    }
 }
 
 // 默认文本样式
